1998-08-17  Tanaka Akira      <akr@jaist.ac.jp>

	* FLIM-ELS (flim-modules): Add `ew-var' and reorder.

	* ew-var.el: New file.

	* ew-data.el: Require 'ew-var.
	(ew-separate-eword): New function.
	(ew-mark-phrase): Use `ew-separate-eword'.

	* ew-dec.el: 
	  - Require 'ew-var.
	  - Move `ew-decode-quoted-encoded-word',
	  `ew-ignore-75bytes-limit', `ew-ignore-76bytes-limit',
	  `ew-permit-sticked-comment', `ew-permit-sticked-special',
	  `ew-decode-us-ascii', `ew-decode-field-syntax-alist' and
	  `ew-decode-field-default-syntax' to ew-var.el.
	(ew-decode-field): Use `ew-separate-eword'.

	* ew-quote.el: Require 'ew-var.
	  - Move `ew-token-regexp', `ew-encoded-text-regexp',
	  `ew-encoded-word-regexp', 

1998-08-17  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Use `ew-decode-field' directly instead of
	`eword-decode-unstructured-field-body' and
	`eword-decode-and-unfold-structured-field'.

	* FLAM-VERSION: New file (renamed from VERSION.FLAM).

	* eword-decode.el (eword-decode-header): Convert CRLF to LF in
	a result of `ew-decode-field'.
	(eword-decode-structured-field-body) Ditto.
	(eword-decode-unstructured-field-body) Ditto.

	* mime.el (mime-read-field): Use `ew-decode-field' instead of
	`eword-decode-unstructured-field-body'.

	* mmbuffer.el (insert-decoded-header): Use `ew-decode-field'
	directly.

1998-08-17  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: New file.

	* TESTPAT: Separator of field-name and field-body is now not special.

	* ew-data.el (ew-special-frag-p): Separator of field-name and
	field-body is now not special.

	* ew-line.el (ew-cut-generic): New function.
	(ew-cut-cr-lf): Use `ew-cut-generic'.
	(ew-cut-cr): New function.
	(ew-cut-lf): New function.
	(ew-crlf-line-generic): Renamed from `ew-line-generic'
	(ew-crlf-line-convert): Renamed from `ew-line-convert'
	(ew-lf-line-generic): New function.
	(ew-lf-line-convert): New function.

	* eword-decode.el (eword-decode-and-fold-structured-field): Use
	`ew-decode-field'.