@@ -1,5 +1,13 @@
 1998-08-17  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* ew-dec.el: Require 'ew-var.
+	(ew-decode-field-cache-buf): New variable.
+	(ew-decode-field-cache-num): New variable.
+	(ew-decode-field-no-cache): Renamed from `ew-decode-field'.
+	(ew-decode-field): Call `ew-decode-field-no-cache' with caching.
+
+1998-08-17  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* FLIM-ELS (flim-modules): Add `ew-var' and reorder.
 
 	* ew-var.el: New file.
